Refactor JsonUtils to use Apache Commons utilities for null and empty checks in metadata injection methods